XWIKI-2249: Statictics service slow down rendering a lot * First try
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/core/trunk/xwiki-core@9204 f329d543-caf0-0310-9063-dda96c69346f